k8s/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app.kubernetes.io/name: db
spec:
  ports:
    - port: 5432
  clusterIP: None
  selector:
    app.kubernetes.io/name: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: db
  serviceName: "db" 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: db
    spec:
      containers:
        - name: db
          image: postgres:18
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/18/docker
  volumeClaimTemplates:
    - metadata:
        name: db
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
